<resources>
    <string name="app_name">Bldg24MobileApp</string>
    <string name="welcome_page">Welcome to Building 24!</string>
    <string name="view_programs">View Programs</string>
    <string name="show_programs_button">Show Program Information</string>
    <string name="programs_fragment">Building 24 List of Programs</string>
    <string name="view_map_button">View Map</string>
    <string name="map_fragment">Map Image Here</string>
    <string name="program_info">"Please choose an option: You can learn more about different programs in Building 24 or view the current floor plan."</string>
    <string name="program_list">List of Programs</string>
    <string name="first_floor">First Floor</string>
    <string name="second_floor">Second Floor</string>
    <string-array name="program_names">
        <item>Computer Programming</item>
        <item>Manufacturing Engineering Technologies</item>
        <item>Mechatronics</item>
        <item>Nondestructive Testing</item>
        <item>Network Operations and System Security</item>
        <item>Bachelor of Applied Science in Cybersecurity</item>
        <item>Bachelor of Applied Science in Mechatronics Engineering Technology and Automation (META)</item>
    </string-array>
</resources>